加了个注册/登陆界面，但是本机显示不了样式，明天去公司那台电脑看看

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,14 +28,14 @@
 			<div class="user-info">
 				
 				<!-- 我的订单 -->
-				<div class="register">
-					<a href=""><p>免费注册</p></a>
-				</div>
-				<div class="login">
-					<a href=""><p>登录</p></a>
-				</div>
+<!--				<div class="register">-->
+<!--					<a href=""><p>免费注册</p></a>-->
+<!--				</div>-->
+<!--				<div class="login">-->
+<!--					<a href=""><p>登录</p></a>-->
+<!--				</div>-->
 				<div class="order">
-					<a href=""><p>个人中心</p></a>
+					<a href="/rental/details"><p>个人中心</p></a>
 				</div>
 			</div>
 		</div>
