可算把注册界面弄好了，明天记得把compiler中的自动build勾上

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -169,7 +169,7 @@
     </div>
     <div class="signup-agileinfo">
         <h3>注册</h3>
-        <p>用户注册并激活成功后，便成为博客的正式用户，正式博客用户拥有博客规定用户所应享有的一切权限。用户将获得一个用户名和密码，用户对自己的用户名、密码及帐号安全性负全部责任。用户同意，若发现任何非法使用帐号、密码或存在安全漏洞等其它有损用户利益的情况，应立即通知经营者。每个用户都应对以其用户名进行的所有活动和事件负全部责任。</p>
+        <p>用户注册并激活成功后，便成为zqb游戏账户租赁网站的正式用户，正式用户拥有网站规定用户所应享有的一切权限。用户将获得一个用户名和密码，用户对自己的用户名、密码及帐号安全性负全部责任。用户同意，若发现任何非法使用帐号、密码或存在安全漏洞等其它有损用户利益的情况，应立即通知经营者。每个用户都应对以其用户名进行的所有活动和事件负全部责任。</p>
         <div class="more">
             <a class="book popup-with-zoom-anim button-isi zoomIn animated" data-wow-delay=".5s" href="#small-dialog">点击注册</a>
         </div>
@@ -178,7 +178,7 @@
 </div>
 <div class="footer-w3l">
     <p class="agileinfo">
-    </p>
+    </p>`
 </div>
 <div class="pop-up">
     <div id="small-dialog" class="mfp-hide book-form">
