暂时做了一部分的导航栏整合

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -67,7 +67,7 @@
                         $("#loginForm").serialize(),
                         function (data) {
                             if(data.flag){
-                                location.href = "in.html";
+                                window.location.href = contextPath + "/index";
                             }else{
                                 $("#errorMsg").html(data.errorMsg);
                             }
