--- a/src/main/resources/templates/account-deal.html
+++ b/src/main/resources/templates/account-deal.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />  
@@ -10,35 +10,18 @@
 	<link rel="stylesheet" href="css/account-deal.css">
 	<script src="js/jquery-1.8.1.min.js"></script>
 	<title>账号交易</title>
+	<script th:inline="javascript">
+		var contextPath = [[${#request.getContextPath()}]];
+	</script>
+	<script>
+		$(function () {
+			$("#navigation").load(contextPath + "/navigation")
+		})
+	</script>
 </head>
 <body>
-	<div class="header">
-		<div class="wrapper clearfix">
-			<ul class="nav">
-				<li><a target="_blank" href="index.html">首页</a></li>
-				<li class="active"><a target="_blank" href="account-deal.html">账号交易</a></li>
-				<li><a target="_blank" href="account-purchase.html">账号求购</a></li>
-				<li><a target="_blank" href="material-deal.html">材料交易</a></li>
-				<li><a target="_blank" href="material-purchase.html">材料求购</a></li>
-				<li><a target="_blank" href="">金币交易</a></li>
-				<li><a target="_blank" href="">二手电脑</a></li>
-			</ul>
+	<div class="header" id="navigation"></div>
 
-			<div class="user-info">
-				
-				<!-- 我的订单 -->
-				<div class="register">
-					<a href=""><p>免费注册</p></a>
-				</div>
-				<div class="login">
-					<a href=""><p>登录</p></a>
-				</div>
-				<div class="order">
-					<a href=""><p>个人中心</p></a>
-				</div>
-			</div>
-		</div>
-	</div>
 	<div class="content">
 		<div class="wrapper">
 			<div class="select fl">
