--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />  
@@ -10,6 +10,14 @@
 	<link rel="stylesheet" href="css/details.css">
 	<script src="js/jquery-1.8.1.min.js"></script>
 	<title>商品详情</title>
+	<script th:inline="javascript">
+		var contextPath = [[${#request.getContextPath()}]];
+	</script>
+	<script>
+		$(function () {
+			$("#navigation").load(contextPath + "/navigation")
+		})
+	</script>
 </head>
 <body>
 	<!-- 顶部导航 -->
