--- a/src/main/resources/templates/account-purchase.html
+++ b/src/main/resources/templates/account-purchase.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="css/common.css">
 	<link rel="stylesheet" href="css/account-deal.css">
 	<title>账号求购</title>
+	<script src="js/jquery-1.8.1.min.js"></script>
 	<script th:inline="javascript">
 		var contextPath = [[${#request.getContextPath()}]];
 	</script>
