--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -9,9 +9,9 @@
     <ul class="nav">
         <li class="active"><a href="">首页</a></li>
         <li><a target="_blank" href="account-deal.html" th:src="@{/rental/account-deall}">账号交易</a></li>
-        <li><a target="_blank" href="account-purchase.html" th:src="@{/account-purchase.html}">账号求购</a></li>
-        <li><a target="_blank" href="material-deal.html" th:src="@{/material-deal.html}">材料交易</a></li>
-        <li><a target="_blank" href="material-seller.html" th:src="@{/material-seller.html}">材料求购</a></li>
+        <li><a target="_blank" href="account-purchase.html" th:src="@{/rental/account-purchase.html}">账号求购</a></li>
+        <li><a target="_blank" href="material-deal.html" th:src="@{/rental/material-deal.html}">材料交易</a></li>
+        <li><a target="_blank" href="material-seller.html" th:src="@{/rental/material-seller.html}">材料求购</a></li>
         <li><a target="_blank" href="">金币交易</a></li>
         <li><a target="_blank" href="">二手电脑</a></li>
     </ul>
@@ -26,7 +26,7 @@
             <a href="/rental/login"><p>登录</p></a>
         </div>
         <div class="order">
-            <a href="/rental/details"><p>个人中心</p></a>
+            <a href="/rental/user/center"><p>个人中心</p></a>
         </div>
     </div>
 </div>
