--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content=" "/>
     <meta name="description" content=" "/>
     <link rel="stylesheet" href="css/reset.css" th:href="@{/css/reset.css}">
-    <link rel="stylesheet" th:href="@{/css/common.css}">
+    <link rel="stylesheet" href="css/common.css" th:href="@{/css/common.css}">
     <link rel="stylesheet" th:href="@{/css/index.css}">
     <script src="js/jquery-1.8.1.min.js"></script>
     <script src="js/slide.js"></script>
