不管了，先提交了再说

--- a/src/main/resources/templates/account-purchase.html
+++ b/src/main/resources/templates/account-purchase.html
@@ -18,7 +18,7 @@
 				<li><a target="_blank" href="account-deal.html">账号交易</a></li>
 				<li><a target="_blank" href="account-purchase.html">账号求购</a></li>
 				<li><a target="_blank" href="material-deal.html">材料交易</a></li>
-				<li class="active"><a target="_blank" href="material-purchase.html">材料求购</a></li>
+				<li class="active"><a target="_blank" href="account-purchase.html">材料求购</a></li>
 				<li><a target="_blank" href="">金币交易</a></li>
 				<li><a target="_blank" href="">二手电脑</a></li>
 			</ul>
