--- a/src/main/resources/templates/center.html
+++ b/src/main/resources/templates/center.html
@@ -1,31 +1,49 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />  
 	<meta name="keywords" content=" " />  
 	<meta name="description" content=" " />
-	<link rel="stylesheet" href="css/reset.css" th:href="@{/css/reset.css}">
-	<link rel="stylesheet" th:href="@{/css/common.css}">
-	<link rel="stylesheet" href="css/center.css" th:href="@{/css/center.css}">
+	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/common.css">
+	<link rel="stylesheet" href="css/center.css">
 	<script src="js/jquery-1.8.1.min.js"></script>
 	<!-- <script src="js/Popt.js"></script>
 	<script src="js/cityJson.js"></script>
 	<script src="js/citySet.js"></script> -->
 	<script src="js/center.js"></script>
 	<title>个人中心</title>
-	<script th:inline="javascript">
-		var contextPath = [[${#request.getContextPath()}]];
-	</script>
-	<script>
-		$(function () {
-			$("#navigation").load(contextPath + "/navigation")
-		})
-	</script>
 </head>
 <body>
 	<!-- 顶部导航 -->
-	<div class="header" id="navigation"></div>
+	<div class="header">
+		<div class="wrapper clearfix">
+			<ul class="nav">
+				<li><a href="">首页</a></li>
+				<li><a target="_blank" href="account-deal.html">账号交易</a></li>
+				<li><a target="_blank" href="account-purchase.html">账号求购</a></li>
+				<li><a target="_blank" href="material-deal.html">材料交易</a></li>
+				<li><a target="_blank" href="material-purchase.html">材料求购</a></li>
+				<li><a target="_blank" href="">金币交易</a></li>
+				<li><a target="_blank" href="">二手电脑</a></li>
+			</ul>
+
+			<div class="user-info">
+				
+				<!-- 我的订单 -->
+				<div class="register">
+					<a href=""><p>免费注册</p></a>
+				</div>
+				<div class="login">
+					<a href=""><p>登录</p></a>
+				</div>
+				<div class="order">
+					<a href=""><p>个人中心</p></a>
+				</div>
+			</div>
+		</div>
+	</div>
 	<!-- 个人中心 -->
 	<div class="content clearfix">
 		<div class="wrapper clearfix">
@@ -399,7 +417,7 @@
 						<div class="i-list clearfix">
 							<input type="text" class="b-i b-i-phone" placeholder="添加更换手机号">
 							<input type="text" class="b-i b-i-num" value="" placeholder="此手机号需绑定几个账号">
-							<select name="selsel" id="sel" class="b-i-status b-i">
+							<select name="" id="" class="b-i-status b-i">
 								<option value="">未发送</option>
 								<option value="">已发送</option>
 							</select>
@@ -414,7 +432,7 @@
 						<div class="i-list clearfix">
 							<input type="text" class="b-i b-i-phone" placeholder="添加更换手机号">
 							<input type="text" class="b-i b-i-num" value="" placeholder="此手机号需绑定几个账号">
-							<select name="ispush" id="ispush" class="b-i-status b-i">
+							<select name="" id="" class="b-i-status b-i">
 								<option value="">未发送</option>
 								<option value="">已发送</option>
 							</select>
@@ -504,7 +522,7 @@
 						<!-- 全部订单 -->
 						<div class="total-order">
 							<div class="select-area">
-								<input type="checkbox" name="" id="option">
+								<input type="checkbox" name="" id="">
 								<div class="o-btn fl">全选</div>
 								<div class="o-btn fl">下架</div>
 								<div class=" o-btn publishBtn">立即发布</div>
@@ -514,7 +532,7 @@
 									<li class="item-order">
 										<div class="item-order-info p-item-info">
 											<div class="order-number o-text">
-												<input type="checkbox" name="" id="times">
+												<input type="checkbox" name="" id="">
 												<span>创建时间：</span><span>2018-4-25-18:00</span>
 											</div>
 											<div class="order-item o-text">
@@ -551,7 +569,7 @@
 						<!-- 材料求购 -->
 						<div class="m-p-order" style="display: none;">
 							<div class="select-area">
-								<input type="checkbox" name="oll" id="allOption">
+								<input type="checkbox" name="" id="">
 								<div class="o-btn fl">全选</div>
 								<div class="o-btn fl">下架</div>
 								<div class=" o-btn publishBtn">立即发布</div>
@@ -561,7 +579,7 @@
 									<li class="item-order">
 										<div class="item-order-info p-item-info">
 											<div class="order-number o-text">
-												<input type="checkbox" name="asdasd" id="timesss">
+												<input type="checkbox" name="" id="">
 												<span>创建时间：</span><span>2018-4-25-18:00</span>
 											</div>
 											<div class="order-item o-text">
@@ -598,7 +616,7 @@
 						<!-- 账号求购 -->
 						<div class="account-p-order" style="display: none;">
 							<div class="select-area">
-								<input type="checkbox" name="allcc" id="allcc">
+								<input type="checkbox" name="" id="">
 								<div class="o-btn fl">全选</div>
 								<div class="o-btn fl">下架</div>
 								<div class=" o-btn publishBtn">立即发布</div>
@@ -608,7 +626,7 @@
 									<li class="item-order">
 										<div class="item-order-info p-item-info">
 											<div class="order-number o-text">
-												<input type="checkbox" name="" id="createTime">
+												<input type="checkbox" name="" id="">
 												<span>创建时间：</span><span>2018-4-25-18:00</span>
 											</div>
 											<div class="order-item o-text">
@@ -724,7 +742,7 @@
 						<!-- 商品材料 -->
 						<div class="total-order">
 							<div class="select-area">
-								<input type="checkbox" name="allcc1" id="allcc1">
+								<input type="checkbox" name="" id="">
 								<div class="o-btn fl">全选</div>
 								<div class="o-btn fl">下架</div>
 								<div class=" o-btn publishBtn">立即发布</div>
@@ -734,7 +752,7 @@
 									<li class="item-order">
 										<div class="item-order-info p-item-info">
 											<div class="order-number o-text">
-												<input type="checkbox" name="crttime2" id="crttime2">
+												<input type="checkbox" name="" id="">
 												<span>创建时间：</span><span>2018-4-25-18:00</span>
 											</div>
 											<div class="order-item o-text">
@@ -773,7 +791,7 @@
 						<!-- 商品账号 -->
 						<div class="m-p-order" style="display: none;">
 							<div class="select-area">
-								<input type="checkbox" name="allccc1" id="allccc1">
+								<input type="checkbox" name="" id="">
 								<div class="o-btn fl">全选</div>
 								<div class="o-btn fl">下架</div>
 								<div class=" o-btn publishBtn">立即发布</div>
@@ -783,7 +801,7 @@
 									<li class="item-order">
 										<div class="item-order-info p-item-info">
 											<div class="order-number o-text">
-												<input type="checkbox" name="crttime" id="crttime">
+												<input type="checkbox" name="" id="">
 												<span>创建时间：</span><span>2018-4-25-18:00</span>
 											</div>
 											<div class="order-item o-text">
@@ -830,7 +848,7 @@
 									<li class="item-order">
 										<div class="item-order-info p-item-info">
 											<div class="order-number o-text">
-												<input type="checkbox" name="crttime3" id="crttime3">
+												<input type="checkbox" name="" id="">
 												<span>创建时间：</span><span>2018-4-25-18:00</span>
 											</div>
 											<div class="order-item o-text">
@@ -1130,25 +1148,25 @@
 							<div class="i-text fl">
 								<span class="fr t-c">当前密码：</span>
 							</div>
-							<input type="password" name="nowpas" id="nowpas" class="a-input fl">
+							<input type="password" name="" id="" class="a-input fl">
 						</div>
 						<div class="info-list clearfix">
 							<div class="i-text fl">
 								<span class="fr t-c">新密码：</span>
 							</div>
-							<input type="password" name="newpas" id="newpas" class="a-input fl">
+							<input type="password" name="" id="" class="a-input fl">
 						</div>
 						<div class="info-list clearfix">
 							<div class="i-text fl">
 								<span class="fr t-c">确认新密码：</span>
 							</div>
-							<input type="password" name="confirmpas" id="confirmpas" class="a-input fl">
+							<input type="password" name="" id="" class="a-input fl">
 						</div>
 						<div class="info-list clearfix">
 							<div class="i-text fl">
 								<span class="fr t-c">验证码：</span>
 							</div>
-							<input type="text" name="checkcode" id="checkcode" class="a-input fl">
+							<input type="text" name="" id="" class="a-input fl">
 							<div class="code-img fl">
 								<img src="images/code.png" alt="">
 								<span class="t-c">看不清，换一张</span>
@@ -1207,7 +1225,7 @@
 								<div class="i-text fl">
 									<span class="fr t-c">验证码：</span>
 								</div>
-								<input type="text" name="checkCode1" id="checkCode1" class="a-input fl">
+								<input type="text" name="" id="" class="a-input fl">
 							</div>
 
 							<div class="submit-btn">
@@ -1240,13 +1258,13 @@
 								<div class="i-text fl">
 									<span class="fr t-c">新支付密码：</span>
 								</div>
-								<input type="password" name="newpay" id="newpay" class="a-input fl">
+								<input type="password" name="" id="" class="a-input fl">
 							</div>
 							<div class="info-list clearfix">
 								<div class="i-text fl">
 									<span class="fr t-c">确认支付密码：</span>
 								</div>
-								<input type="password" name="conpay" id="conpay" class="a-input fl">
+								<input type="password" name="" id="" class="a-input fl">
 								<span class="tag">支付密码必须由6-12位字母和数字混合组成</span>
 							</div>
 
@@ -1316,13 +1334,13 @@
 							<div class="i-text fl">
 								<span class="fr t-c">新手机号：</span>
 							</div>
-							<input type="text" name="newMobile" id="newMobile" class="a-input fl">
+							<input type="text" name="" id="" class="a-input fl">
 						</div>
 						<div class="info-list clearfix">
 							<div class="i-text fl">
 								<span class="fr t-c">验证码：</span>
 							</div>
-							<input type="text" name="checkCode2" id="checkCode2" class="a-input fl">
+							<input type="text" name="" id="" class="a-input fl">
 							<div class="code-img fl">
 								<img src="images/code.png" alt="">
 								<span class="t-c">看不清，换一张</span>
@@ -1354,5 +1372,5 @@
 			</div>
 		</div>
 	</div>
-</body>
-</html>
+	</body>
+	</html>
