登录界面需要刷新一下才能正常显示

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -67,7 +67,7 @@
                         $("#loginForm").serialize(),
                         function (data) {
                             if(data.flag){
-                                window.location.href = contextPath + "/index";
+                                window.location.replace(contextPath + "/index");
                             }else{
                                 $("#errorMsg").html(data.errorMsg);
                             }
