更改了实体类的字段，回去再改

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -48,8 +48,8 @@
 <div class="display fl">
     <div class="display-t clearfix">
         <div class="slogan fl">
-            <p class="big-t t-c">最专一的DNF平台</p>
-            <p class="sm-t t-c">专一如初恋 我们只做地下城与勇士的游戏网络交易平台</p>
+            <p class="big-t t-c">最专一的游戏租赁平台</p>
+            <p class="sm-t t-c">专一如初恋 我们只做游戏网络租赁平台</p>
         </div>
         <div class="d-img fr">
             <img src="images/首页_03.png" alt="">
