--- a/src/main/resources/templates/account-purchase.html
+++ b/src/main/resources/templates/account-purchase.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />  
@@ -8,36 +8,27 @@
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/common.css">
 	<link rel="stylesheet" href="css/material-purchase.css">
+	<script src="js/jquery-1.8.1.min.js"></script>
 	<title>材料求购</title>
+	<script th:inline="javascript">
+		var contextPath = [[${#request.getContextPath()}]];
+	</script>
+	<script>
+		$(function () {
+			$("#navigation").load(contextPath + "/navigation");
+			$("#confirm").click(function () {
+				alert("dian")
+				$.post(contextPath + "/account/accountSale",
+						$("#accountForm").serialize(),
+						function (data) {
+							window.location.replace(contextPath + "/account/success");
+						},"json")
+			});
+		})
+	</script>
 </head>
 <body>
-	<div class="header fl">
-		<div class="wrapper clearfix">
-			<ul class="nav">
-				<li><a target="_blank" href="index.html">首页</a></li>
-				<li><a target="_blank" href="account-deal.html">账号交易</a></li>
-				<li><a target="_blank" href="account-purchase.html">账号求购</a></li>
-				<li><a target="_blank" href="material-deal.html">材料交易</a></li>
-				<li class="active"><a target="_blank" href="account-purchase.html">材料求购</a></li>
-				<li><a target="_blank" href="">金币交易</a></li>
-				<li><a target="_blank" href="">二手电脑</a></li>
-			</ul>
-
-			<div class="user-info">
-				
-				<!-- 我的订单 -->
-				<div class="register">
-					<a href=""><p>免费注册</p></a>
-				</div>
-				<div class="login">
-					<a href=""><p>登录</p></a>
-				</div>
-				<div class="order">
-					<a href=""><p>个人中心</p></a>
-				</div>
-			</div>
-		</div>
-	</div>
+	<div class="header fl" id="navigation"></div>
 
 	<div class="content clearfix fl">
 		<div class="wrapper clearfix">
@@ -51,12 +42,10 @@
 				<div class="alert-con">
 					<ul>
 						<li>温馨提示：</li>
-						<li>1.DNF每日06:00更新当日游戏币交易规则，请您注意【角色交易上限】</li>
-						<li>2.如果您使用多角色发货，请在“游戏角色名”处填写每个角色发货的金额，例：A角色3000W，B角色4000W</li>
-						<li>3.因游戏限制，请绑定正确的密保工具</li>
-						<li>4.当您发布邮寄交易商品时，将由玩家承担交易手续费，如：发布1000万金=20元的商品，实际发货950万金</li>
-						<li>5.为了保障订单正常交易，请您保留发货凭证（发货视频），涉及钱财莫大意，电话确认才放心，谨防诈骗！</li>
-
+						<li>1.请输入正确的账号和密码</li>
+						<li>2.请勿透露密保信息，以免造成损失</li>
+						<li>3.账号出租期间承租方如有损害账号的行为，平台概不负责</li>
+						<li>4.请确认出租价格，价格单位是元/小时</li>
 					</ul>
 				</div>
 			</div>
@@ -69,91 +58,39 @@
 				<div class="item-area-alert t-c">
 					为了帮助您更快的买到商品，请仔细填写以下信息
 				</div>
-				<div class="area-con-w">
-					<div class="area-con">
-						<div class="arealeft fl t-c2">
-							所在区：
-						</div>
-						<div class="areacenter fl">
-							<ul class="t-c">
-								<li>广东区</li>
-								<li>北京区</li>
-								<li>四川区</li>
-								<li>江苏区</li>
-								<li>湖北区</li>
-								<li>广西区</li>
-								<li>东北区</li>
-								<li>浙江区</li>
-								<li>山东区</li>
-								<li>上海区</li>
-								<li>西南区</li>
-								<li>安徽区</li>
-							</ul>
-						</div>
-						<div class="arearight fl">
-							<a href="" class="t-c">更多</a>
-						</div>
-					</div>
-				</div>
-				
+
 			</div>
+			<form action="#" method="post" id="accountForm">
 			<div class="material-form">
 				<div class="m-name m-text">
-					<span>输入材料名称：</span>
-					<input type="text" class="m-input">
+					<span>输入游戏账号：</span>
+					<input type="text" class="m-input" id="username" name="username">
 				</div>
-				<div class="deal-type fl">
-
-					<span class="fl t-c2">交易方式：</span>
-					<div class="deal-type-form fl">
-						<div class="mail deal-type-list">
-							<input type="radio" name="dealType" id="mail" value="mail" class="option-radio">
-							<label for="mail"></label>
-							<span>邮寄交易</span>	
-							<span class="d-c">由买家承担手续费</span>
-						</div>
-						<div class="auction deal-type-list">
-							<input type="radio" name="dealType" id="auction" value="mail" class="option-radio">
-							<label for="auction"></label>
-							<span>拍卖交易</span>
-							<span class="d-c">由买家承担手续费</span>
-						</div>
-						<div class="face deal-type-list">
-							<input type="radio" name="dealType" id="face" value="mail" class="option-radio">
-							<label for="face"></label>
-							<span>当面交易</span>
-							<span class="d-c">厄运之城第一个频道 西海岸 魔法师工会 莎兰处</span>
-							
-						</div>
-
-					</div>
-					
+				<br>
+				<br>
+				<div class="m-name m-text">
+					<span>输入游戏密码：</span>
+					<input type="text" class="m-input" id="password" name="password">
 				</div>
-				<div class="rate fl">
-					<span class="star">＊</span><span class="r-text">自行添加游戏汇率：</span>
-					<input type="text" name="" id="" class="r-input r-input1">
-					<span class="r-text">万金</span>
-					<span class="r-text  r-line">&nbsp;——&nbsp;</span>
-					<span class="star">＊</span><span class="r-text">想多少钱买</span>
-					<input type="text" name="" id="" class="r-input r-input2">
-					<span class="r-text">元（可自行调整）</span>
-				</div>
-				<div class="item-amount fl">
-					<span class="star">＊</span><span class="r-text">求购件数：</span>
-					<input type="text" name="" id="" class="r-a-input">
-				</div>
-				<div class="item-tag">
-					<span class="r-text">商品标签：</span>
-					<span class="r-text">【邮寄交易】</span>
+<!--				<div class="item-amount fl">-->
+<!--					<span class="star">＊</span><span class="r-text">出租单价(元/小时)：</span>-->
+<!--					<input type="text" name="money" id="money" class="r-a-input">-->
+<!--				</div>-->
+				<br>
+				<br>
+				<div class="m-name m-text">
+					<span>出租单价(元/小时)：</span>
+					<input type="text" class="m-input" id="money" name="money">
 				</div>
 				<div class="m-name m-text m-textarea-w">
-					<span class="fl">简述您的求购要求：</span>
-					<textarea name="" id="" cols="30" rows="10" class="m-textarea"></textarea>
+					<span class="fl">简介：</span>
+					<textarea name="descript" id="descript" cols="30" rows="10" class="m-textarea"></textarea>
 				</div>
 				<div class="confirm-btn-w">
-					<div class="confirm-btn">确认无误，立即发布</div>
+					<input class="confirm-btn" id="confirm" name="confirm" type="button" value="确认无误，立即发布">
 				</div>
 			</div>
+			</form>
 			<div class="icon-tab">
 				<div class="icon-w">
 					<div class="icon-list icon1">
