--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -25,14 +25,14 @@
                         "        </div>")
                 } else {
                     $("#loginInfo").html("<div class=\"register\">\n" +
-                        "            <a href=\"\"><p>免费注册</p></a>\n" +
+                        "            <a href=\"/rental/login\"><p>免费注册</p></a>\n" +
                         "        </div>\n" +
                         "        <div class=\"login\">\n" +
                         "            <a href=\"/rental/login\"><p>登录</p></a>\n" +
                         "        </div>")
                 }
             }
-        })
+        });
     })
 </script>
 <body>
